--- a/1202-d3js.html
+++ b/1202-d3js.html
@@ -17,9 +17,9 @@
     .demo a {text-decoration:none;outline:none}
     </style>
     <script type='text/javascript'>
-      var SLIDESHOW_MODE = 0; // change it to 1 to start in slideshow mode
+      var SLIDESHOW_MODE = 1; // change it to 1 to start in slideshow mode
     </script>
-    <script src='h5s/slides.js' type='text/javascript'></script>
+    <script src='h5s/slides.min.js' type='text/javascript'></script>
     <script src='h5s/prettify.min.js' type='text/javascript'></script>
     <script src='1202-d3js/d3.min.js' type='text/javascript'></script>
     <script src='1202-d3js/example_loader.js' type='text/javascript'></script>
