--- a/template.html
+++ b/template.html
@@ -28,7 +28,7 @@
     <link rel="alternate stylesheet" href="h5s/print.css" type="text/css" media='screen' title="Print Preview" />
     
     <link rel="stylesheet" href="h5s/print.css" type="text/css" media="print" />
-  <script src='h5s/slides.js'></script>
+  <script src='h5s/slides.min.js'></script>
   </head>
   
   <body>
