Forgotten command from command line

--- a/1203-using_git.html
+++ b/1203-using_git.html
@@ -371,6 +371,7 @@ $ git checkout -q master
 $ git mv test.txt hello.txt
 $ git commit -aqm "Better file name"
 $ git checkout -q newart
+$ ls >> catalog
 $ git commit -aqm 'Adding story to the catalog'
 $ git checkout -q master
 </pre>
