--- a/git_svn.html
+++ b/git_svn.html
@@ -77,7 +77,7 @@
 $ git svn clone svn+ssh://svn.hostname/svnpath/repo -r 22927:HEAD --stdlayout
 </pre>
 <pre>
-Initialized empty Git repository in /home/dmccombs/git/individual/.git/
+Initialized empty Git repository in /home/dmccombs/git/repo/.git/
         A       repos/src/bd_tool/manage.py
         A       repos/src/bd_tool/views.py
         A       repos/src/bd_tool/__init__.py
@@ -166,16 +166,16 @@ Switched to a new branch 'dans-local-test'
 <pre>
 [dans-local-test 0b8f8ac] Adding a new file.
  1 file changed, 1 insertion(+)
- create mode 100644 individual/dmccombs/newfile.txt
+ create mode 100644 repo/dmccombs/newfile.txt
 </pre>
 <pre>
 (dans-local-test)$ git svn dcommit
 </pre>
 <pre>
 Committing to svn+ssh://svn.hostname/svnpath/repo/branches/dans-test-branch ...
-    A   individual/dmccombs/newfile.txt
+    A   repo/dmccombs/newfile.txt
 Committed r22964
-    A   individual/dmccombs/newfile.txt
+    A   repo/dmccombs/newfile.txt
 r22964 = 2b0a8a0ea3185c398b3d6ba5402f8dc5be400a2c (refs/remotes/dans-test-branch)
 No changes between current HEAD and refs/remotes/dans-test-branch
 Resetting to the latest refs/remotes/dans-test-branch
@@ -281,7 +281,7 @@ Switched to branch 'dans-local-test'
 <pre>
 Updating d2e09ed..e1d6f3b
 Fast-forward
- individual/dmccombs/newfile.txt |    2 ++
+ repo/dmccombs/newfile.txt |    2 ++
  1 file changed, 2 insertions(+)
 </pre>
 <pre>
@@ -324,10 +324,10 @@ Resetting to the latest refs/remotes/dans-test-branch
 (dans-local-test)⚡$ git add -p
 </pre>
 <pre>
-diff --git a/individual/dmccombs/newfile.txt b/individual/dmccombs/newfile.txt
+diff --git a/repo/dmccombs/newfile.txt b/repo/dmccombs/newfile.txt
 index e51bbc8..d82653b 100644
---- a/individual/dmccombs/newfile.txt
-+++ b/individual/dmccombs/newfile.txt
+--- a/repo/dmccombs/newfile.txt
++++ b/repo/dmccombs/newfile.txt
 @@ -1,3 +1,5 @@
  stuff
 +more stuff!
