Few changes that make slides look more similar between Chrome and Firefox

--- a/1203-using_git.html
+++ b/1203-using_git.html
@@ -26,7 +26,7 @@
   <body>
     <section class='slides layout-widescreen template-default'>
       <article>
-        <h1 style='font-size:2000%;opacity:.1'>
+        <h1 style='font-size:600px;opacity:.1;font-weight:bold'>
           Git
         </h1>
         <h2>
