Adding Dan's twitter

--- a/git_svn.html
+++ b/git_svn.html
@@ -29,6 +29,9 @@
         <h1>
           Using Git with SVN
         </h1>
+        <div class='author' style='font-size:smaller'>
+          <a href='https://twitter.com/danmccombs'>@danmccombs</a>
+        </div>
       </article>
       <article>
         <h2>
