--- a/1203-using_git.html
+++ b/1203-using_git.html
@@ -50,7 +50,7 @@
         <div class='build'>
           <h4>...</h4>
           <p class='labrat'>take a minute and write your own ones.</p>
-        </dib>
+        </div>
       </article>
 
       <article>
