Few minor changes to screen presentation, to Cole for review

--- a/1208-screen.html
+++ b/1208-screen.html
@@ -68,14 +68,18 @@ $ sudo make clean all install clean</pre></ul>
           Starting it up
         </h2>
         <div class='build'>
-			<div>As simple as...<pre>
+			<div style='padding-top:1em'>As simple as...<pre>
 $ screen</pre></div>
 			<p>Once you bypass the spash screen, you're in it</p>
-			<div>... though it's hard to tell</div>
+			<div style='font-size:big'>...though it's hard to tell</div>
+<div style='padding-top:1em'>
 			<p>One hint that you're in screen:<pre>
 $ echo $TERM</pre></p>
+</div>
+<div style='padding-top:1em'>
 			<div>Exit the shell and you'll exit screen<pre>
 [screen is terminating]</pre></div>
+</div>
 
         </div>
       </article>
