A final slide to finish off the presentation

--- a/1208-screen.html
+++ b/1208-screen.html
@@ -176,5 +176,17 @@ shell -/usr/local/bin/bash</pre></li>
 		</ul>
       </article>
 
+      <article>
+        <h2>
+			Other resources
+        </h2>
+		<ul>
+			<li>Man page, of course<pre>
+$ man screen</pre></li>
+			<li>The website (<a href="http://www.gnu.org/software/screen/">http://www.gnu.org/software/screen/</a>) has a few more resources</li>
+			<li>Handy wiki about screen: <a href="http://aperiodic.net/screen/">http://aperiodic.net/screen/</a></li>
+		</ul>
+      </article>
+
   </body>
 </html>
