Fixed image link

--- a/1207-uwsgi.html
+++ b/1207-uwsgi.html
@@ -198,7 +198,7 @@ uwsgi --plugins http,lua --http :8080 --http-modifier1 6 --lua hello.lua
 <div><a href="http://www.slideshare.net/r1chardj0n3s/web-microframework-battle">
 10 micro frameworks compared</a> (bad ranking approach but useful info)</div>
 
-<div style='margin-top:15px'>OSCON 2012 talk &#147;<a href='http://www.oscon.com/oscon2012/public/schedule/detail/24399'>Accelerate your business with blazing prototypes</a>&#148;, here is one <a href='images/flask-vs-others.png'>slide</a> 
+<div style='margin-top:15px'>OSCON 2012 talk &#147;<a href='http://www.oscon.com/oscon2012/public/schedule/detail/24399'>Accelerate your business with blazing prototypes</a>&#148;, here is one <a href='1207-uwsgi/flask-vs-others.png'>slide</a> 
 for a reference.</div>
 </div>
 
