Typo, thanks to Mr. Magliocchetti

--- a/1207-uwsgi.html
+++ b/1207-uwsgi.html
@@ -317,7 +317,7 @@ better frontend servers.
 <!-- *************************** --> </article><article>
 <h2>Few Clarifications</h2>
 
-<p>uWSGI is not a framework. Its tools are so convinient that it's easy to write uWSGI dependent code, which is not always ideal.</p>
+<p>uWSGI is not a framework. Its tools are so convenient that it's easy to write uWSGI dependent code, which is not always ideal.</p>
 <ul class='build'>
 <li>tools are always evolving, even uWSGI ones</li>
 <li>it's easier to test code that does not depend on external libs</li>
